# nextflare-earn

./: .stats.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  api.md  mypy.ini  package-lock.json  package.json  pyproject.toml  release-please-config.json  wrangler.json
. github/workflows/: publish.yml
.github/workflows/: ci.yml  create-releases.yml  publish-pypi.yml  release-doctor.yml
scripts/: lint
scripts/utils/: upload-artifact.sh
src/earn_app/: __init__.py  _base_client.py  _client.py  _exceptions.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py
src/earn_app/_utils/: _logs.py  _resources_proxy.py
src/earn_app/resources/: __init__.py  missions.py  staking.py  stats.py  token.py
src/earn_app/resources/users/: __init__.py  stakes.py  users.py
src/earn_app/types/: __init__.py  mission.py  mission_list_params.py  mission_list_response.py  staking_list_vaults_response.py  staking_vault.py  stat_retrieve_response.py  token_retrieve_info_response.py  user.py  user_create_params.py  user_list_missions_response.py  user_list_referrals_response.py
src/earn_app/types/users/: __init__.py  stake_create_params.py  stake_list_response.py  (+1 more)
tests/: conftest.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  utils.py
tests/api_resources/: test_missions.py  test_staking.py  test_stats.py  test_token.py  test_users.py
tests/api_resources/users/: test_stakes.py
tests/test_utils/: test_proxy.py  test_typing.py
