[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextflare-earn"
version = "0.1.0"         # Auto-update with tagging strategy
description = "…"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "BoomchainLabs", email = "cashapppaymentpay01@gmail.com" }
]
dependencies = [
  # Add runtime dependencies here
]
